# sm4-gcm

./: Cargo.toml  README.md
examples/: bench.rs  encrypt.rs  test.rs
src/: decryptor.rs  encryptor.rs  lib.rs  util.rs
