[package]
name = "sm4-gcm"
version = "0.0.0"
edition = "2021"
authors = ["Hatter Jiang"]
repository = "https://git.hatter.ink/hatter/sm4-gcm"
description = "SM4-GCM Library"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "gcm", "sm4", "sm4-gcm", "stream"]
categories = ["cryptography"]


[dependencies]
sm4 = "0.5.1"
